fix modal close button alignment on mobile

--- a/app/components/Modal/index.module.css
+++ b/app/components/Modal/index.module.css
@@ -14,20 +14,21 @@
     padding: 3vw;
 }
 .header {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
     align-items: center;
-    justify-content: space-between;
     margin-block-end: 3vw;
     font: var(--font-xxx-big);
 }
 .close {
-    align-self: flex-end;
+    justify-self: flex-end;
     font: inherit;
     color: inherit;
     appearance: none;
     background: none;
     border: none;
     cursor: pointer;
+    padding: .5rem;
 }
 .close::after {
     content: "\2715";
